--- a/app/src/main/res/layout/frag_list_reposit.xml
+++ b/app/src/main/res/layout/frag_list_reposit.xml
@@ -7,6 +7,15 @@
     android:orientation="vertical"
     android:weightSum="1">
 
+    <ProgressBar
+        android:id="@+id/progress_bar_list_repos"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:visibility="gone" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_reposit"
         android:layout_width="match_parent"
