--- a/app/src/main/res/layout/item_modelo.xml
+++ b/app/src/main/res/layout/item_modelo.xml
@@ -8,7 +8,8 @@
     android:orientation="horizontal"
     android:weightSum="1">
 
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/foto"
         android:layout_width="56dp"
         android:layout_height="56dp"
